# PerceptualEvaluation

./: .gitmodules  README.rst  TODO.rst  build.py  constraints.txt  core.css  excerpt_search.output  index.html  index.md  listening_test.xml  maestro_split_indices.pkl  metric.pkl  nmf_template.pkl  perceptual_app.py  pyproject.toml  requirements.txt  scaler.pkl  velocity_model.pkl  vienna_model.pkl
listening_test_saves/: save-04QJRgj02cQbXNAhZFSsk5wDHLGWWY5X.xml  save-0NGZNXSKvS3b5OSH3Xtg2CCWwCIKIHmJ.xml  save-1WKdJTgy3GLuF3KzvgrbPJBFPbRv0pe2.xml  save-1qDhMnUGfVsjH9xpyEsG0ENTtpp1ge6h.xml  save-20pU0Ae9cihewlJti16jQEIg8DzSyiVB.xml  save-39NsBibALtLg334hDbzLsroB0sVBa4Ue.xml  save-3jSbIS1XZn8EZCXRMUjdZikxxd9o0rd4.xml  save-3yOxn5cAAOt11WyoGw3D6AcybnVbhpll.xml  save-47t7OoPdx0g4AVgd6WOlUZ0oDA315I9a.xml  save-5bUvfOODlZYxucDukHfOzuBTNcTJdoej.xml  save-5dzzPR81lfyL0hYdXPhKubXHAYBzabsf.xml  save-5rUoZOrYdMkWjpR38myQmTpwOc3SlSrr.xml  save-5xUvY2QktFt6KLk8zoREQd8PLzF9LOaR.xml  save-6C1vifY5DuPw1eS72z2HM8KCtMk8lWKs.xml  save-6r10WAQsrnyr6ZRLn27Vyhw7UodZQoGW.xml  save-7820tOLNqhPSPcMjkJ0C7KGiXi1cCRqK.xml  save-7jtV2Pgcu7F5j9nXRHwTZRPgMWP3idkq.xml  save-7l4DYxsMsMexQUfUVPVyFCVierQsFXjM.xml  save-84H9anUGlQQIV1i1dl8lGZn8UGqYXkc5.xml  save-8PHzdZG591IL6L0kb392fjUqy5Xp6PCe.xml  save-9D7QrBhhzqri1GegCd6igyzNdLpuU1o3.xml  save-9GYeLWMCt5PohaErKWBBwqiWuD1Q1QQb.xml  save-9oSdwCvQP8WYLP3JfdEoT3L5Cf5CVoa4.xml  save-A0nPZXM0ttHjb6QzdR1Oo5lJ32ymzpva.xml  save-A1e5qBVwkiWslimC7bpqRacYHjOfmE1W.xml  save-AL7Dn1zRpJceZlD5s36ThpBFfgQjmp2X.xml  save-B1b28a170TnQpfCPrLX74RRadmBKak6M.xml  (+113 more)
(+26 files in other folders)
