[tool.poetry]
name = "perceptual"
version = "0.1.0"
description = ""
authors = ["Federico Simonetta <federico.simonetta@unimi.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
essentia = "^2.1b6.dev184"
fastcluster = "^1.1.26"
scipy = "^1.4.1"
joblib = "^0.14.1"
# asmd = "^0.1.1"
pretty_midi = "^0.2.8"
magenta = "^1.3"
fastdtw = "^0.3.4"
psutil = "^5.7.0"
mir_eval = "^0.5"
plotly = "^4.9"
dash = "^1.12.0"
numba = "0.48"
kaleido = "^0.0.3"

[tool.poetry.dev-dependencies]
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry>=0.12", "cython>=0.29.14"]
build-backend = "poetry.masonry.api"
